[package]
name = "amazement"
version = "0.0.1"
authors = ["No <@>"]
edition = "2021"
description = "A library of different maze generation algorithms."
documentation = "https://docs.rs/amazement/"
readme = "README.md"
repository = "https://github.com/AxiomaticSemantics/maze_generator.git"
license = "MIT"
keywords = ["maze", "generator"]
categories = ["algorithms", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
petgraph = "0.6.5"
thiserror = "1.0.30"
anyhow = "1.0.56"

[dev-dependencies]
